headers/compatibility/bsd/stdio.h
@@ -19,6 +19,10 @@ extern "C" {
 
 char *fgetln(FILE *stream, size_t *_length);
 
+int asprintf(char **ret, char const *format, ...) __PRINTFLIKE(2,3);
+int vasprintf(char **ret, char const *format, va_list ap);
+
+
 #ifdef __cplusplus
 }
 #endif
